<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上vip</string>
    <string name="demo_name_basemap">基本地图功能</string>
    <string name="demo_title_basemap">基本地图功能--BaseMapDemo</string>
    <string name="demo_desc_basemap">创建一张百度地图并管理地图的生命周期</string>
    <string name="demo_name_layers">图层展示</string>
    <string name="demo_title_layers">图层展示--LayersDemo</string>
    <string name="demo_desc_layers">展示普通图、卫星图及交通流量图</string>
    <string name="demo_name_control">地图操作功能</string>
    <string name="demo_desc_control">介绍地图基本控制方法</string>
    <string name="demo_title_control">地图操作功能--MapControlDemo</string>
    <string name="demo_name_ui">UI控制功能</string>
    <string name="demo_title_ui">UI控制功能--UISettingsDemo</string>
    <string name="demo_desc_ui">介绍开关手势功能和显示隐藏UI控件</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示--LocationOverlayDemo</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="demo_name_geometry">自定义绘制功能</string>
    <string name="demo_title_geometry">自定义绘制功能--GeometryDemo</string>
    <string name="demo_desc_geometry">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_overlay">覆盖物功能</string>
    <string name="demo_title_overlay">覆盖物功能--OverlayDemo</string>
    <string name="demo_desc_overlay">介绍添加覆盖物并响应点击功能和弹出pop功能</string>
    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="demo_name_route">路径规划功能</string>
    <string name="demo_title_route">路径规划功能--RoutePlanDemo</string>
    <string name="demo_desc_route">介绍公交、驾车和步行三种线路规划方法和自设路线方法</string>
    <string name="demo_name_geocode">地理编码功能</string>
    <string name="demo_title_geocode">地理编码功能--GeoCodeDemo</string>
    <string name="demo_desc_geocode">介绍地址信息与坐标之间的相互转换</string>
    <string name="demo_name_bus">公交线路查询功能</string>
    <string name="demo_title_bus">公交线路查询功能--BusLineDemo</string>
    <string name="demo_desc_bus">介绍查询公交线路功能</string>
    <string name="demo_name_offline">离线地图功能</string>
    <string name="demo_title_offline">离线地图功能--OfflineDemo</string>
    <string name="demo_desc_offline">介绍如何下载和使用离线地图</string>
    <string name="demo_name_navi">导航功能</string>
    <string name="demo_title_navi">导航功能--Navidemo</string>
    <string name="demo_desc_navi">介绍如何调起百度地图Android版（V5.0及以上版本）导航功能</string>
    <string name="demo_name_cloud">LBS.云检索功能</string>
    <string name="demo_title_cloud">LBS.云检索功能--CloudSearchDemo</string>
    <string name="demo_desc_cloud">介绍如何使用LBS.云检索用户自有数据</string>
    <string name="key_error">"请在  DemoApplication.java文件输入正确的授权Key！\r\n申请地址：http://dev.baidu.com/wiki/static/imap/key/"</string>
    <string name="navi_tip">本功能为调起百度地图Android客户端（V5.0及以上版本）的导航功能，用户必须已安装百度地图客户端，如果没有安装则提示用户下载安装百度地图客户端。</string>
    <string name="title_activity_cloud_search_demo">云检索使用介绍</string>
    <string name="cloud_search_tips">          \t\tLBS.云是百度地图针对LBS开发者推出的平台级服务。结合已有的地图API和SDK服务。通过开放服务端存储和计算能力,提供海量位置数据存储、检索、展示一体化解决方案。\n\n
          \t\t该服务对开发者免费开放。测试demo里写入了测试的ak。开发者可以使用测试ak查看 LBS.云检索的效果。如果开发者要使用自己的数据，请在申请ak后替换demo中的ak。\n\n
          \t\t如有任何关于LBS.云服务的问题,诸如如何申请ak、如何存储和检索数据等，请访问百度地图官方“LBS开放平台”。地址：http://lbsyun.baidu.com/  \n</string>
    <string name="service_phone">客服电话：400–888–8889</string>
    <string name="btn_call_server">拨打客服电话</string>
    <string name="phone_order">电话下单</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_doing_end_refresh">加载中…</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新…</string>
    <string name="p2refresh_refresh_lasttime">最近更新 : </string>
    <string name="submit_suggestion">提交意见</string>
    <string name="submit_tip">请留下您宝贵的意见！ (250字以内)...</string>
    <string name="submit_success">意见提交成功！</string>
    <string name="submit_none">请写上您宝贵的意见</string>
    <string name="person_center">个人中心</string>
    <string name="person_info">个人资料</string>
    <string name="person_phone">电话号码</string>
    <string name="person_attention">我的关注</string>
    <string name="person_like">我的喜好</string>
    <string name="desc">图片</string>
    <string name="logout">退出登录</string>
    <string name="msg_error_server">服务器处理时，出现异常！</string>
    <string name="msg_error_client">服务器请求时，出现异常！</string>
    <string name="msg_error_unknown">未处理异常！</string>
    <string name="msg_no_data">没有可加载的数据！</string>
    <string name="msg_no_authority">没有可访问的权限！</string>
    <string name="msg_no_network">网络不可用！</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_guidance">Guidance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">我的关注</string>
    <string name="message">附近商家</string>
    <string name="me">优惠卷</string>
    <string name="more">更多</string>
    <string name="first_tabar_map">地图</string>
    <string name="first_Tabsr_list">列表</string>
	
    <string name="share_text">掌上VIP客户端: http://appkinx.aliapp.com/QueueClient.apk</string>
</resources>