<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/top_bar_background"
        android:gravity="center_vertical" >
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/person_center"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/middle_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_layout"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/person_info_btn"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn_style_white"
                android:onClick="doClick" />

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:src="@drawable/search" 
                android:contentDescription="@string/desc"/>
            

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:layout_toRightOf="@+id/iv1"
                android:text="@string/person_info"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dip"
                android:src="@drawable/go" 
                android:contentDescription="@string/desc"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line" 
            android:contentDescription="@string/desc"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/person_attention_btn"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn_style_white"
                android:onClick="doClick" />

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:src="@drawable/search" 
                android:contentDescription="@string/desc"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:layout_toRightOf="@+id/iv5"
                android:text="@string/person_attention"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dip"
                android:src="@drawable/go" 
                android:contentDescription="@string/desc"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line" 
            android:contentDescription="@string/desc"/>

       
    </LinearLayout>
    
    <Button
            android:id="@+id/btn_exit"
            style="@style/page1_text"
            android:layout_width="280.0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dip"
            android:background="@drawable/button_selectot_corners_shadow"
            android:onClick="loginViewClick"
            android:text="@string/logout" />

</RelativeLayout>